[package]
name = "hads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
tokio = { version = "1.26.0", features = [ "full", "tracing" ] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = [ "full" ] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
